--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -530,4 +530,6 @@ clear_env = no
 ; log PHP errors to a file, otherwise they're bubbled up through FPM via stderr
 php_value[error_log] = /tmp/heroku.php-fpm.www.${PORT}.log
 
+extension=phalcon.so
+
 include=${HEROKU_PHP_FPM_CONFIG_INCLUDE}
